package tutorial;

option java_package = "cn.com.git.udmp.component.batch.communication.protobuf";
option java_outer_classname = "BatchMessage";

message Message {
  required Header header =1;
  required Sender sender = 2;
  required Receiver receiver =3;
  optional Server server = 4;
  optional Agent agent = 5;
  optional Job job =6;
  optional Exception exceptions = 7;
  repeated Extension extensions =8;
  
  
  message Job{
    required BasicInfo basicInfo = 1;
    optional ShardInfo shardInfo = 2;
    repeated Param params=3;
  }

  message Header{
      required string commandType =1;
      required string command =2;
      optional string memo = 3;
      optional string timestamp = 4;
  }

  message Extension{
      required string  key = 1;
      required string value = 2;
  }

  message Sender{
      required string fromIp = 1;
      required string fromPort = 2;
      optional string fromId = 3;
  }

  message Receiver{
      required string toIp =1;
      required string toPort =2;
      optional string toId =3;
  }

  message Server{
    optional string id =1;
    required double cpuLoad = 2;
    required double memoryLoad =3;
    optional Extension extends =4;
  }

  message Agent{
    optional string id =1;
    required double cpuLoad =2;
    required double memortyLoad =3;
    optional int32 queueLength =4;
    optional int32 estWaitTime =5;
    optional Extension extends=6;
  }

  message BasicInfo{
    required string id =1;
    required string name =2;
    required int32 batchSize =3;
    optional int32 expectDuration=4;
    optional string frequency=5;
    optional int32 totalCnt=6;
    optional int32 successCnt=7;
    optional int32 failedCnt=8;
    optional string dueDate=9;
    optional string processDate=10;
    optional string runId=11;
    optional bool isSplit=12;
    optional string splitRelaGrpId=13;
    optional string logLevel=14;
    optional string logInfo=15;
    optional string logType = 16;
    optional string status=17;
    optional Extension extends=18;
    required string taskClazz=19;
    required int32 isSpringBean=20;
    optional int32 jobThreadLimit=21;
    optional string jobStartWindow=22;
    optional string jobEndWindow=23;
    optional bool isLoop=24;
    optional string chainRunId=25;
  }

  message ShardInfo{
    optional string strategy=1;
    optional int32 hashKey=2;
    required int64 startRowNum=3;
    optional int64 startKey=4;
    required int64 endRowNum=5;
    optional int64 endKey=6;
    optional int32 shardingCnt=7;
    optional Extension extends=8;
  }
  
	message Exception{
		required string cause =1;
		optional Extension extends=2;
	}
	
	message Param{
		required string paramName =1 ;
		required string paramCode= 2 ;
		required string paramType =3 ;
		required string paramValue =4 ;
		optional Extension extends=5; 
	}
	
}


